deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardgame-deployment
  labels:
    app: boardgame
spec:
  replicas: 3
  selector:
    matchLabels:
      app: boardgame
  template:
    metadata:
      labels:
        app: boardgame
    spec:
      containers:
      - name: boardgame
        image: muhannadpv/boardgame:latest
        ports:
        - containerPort: 80
