service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
spec:
  selector:
    app: boardgame
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
