ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: boardgame.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardgame-service
            port:
              number: 80
